--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "name": "rails-simple-airbnb",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.1",
+    "bootstrap": "^4.4.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.1"
+  }
 }
